refactor: Rename project to Chronos Gaia
Updates the project name and related configurations to reflect the new identity of Chronos Gaia, an intelligent plant growth tracker. This includes changes in package.json, index.html, metadata.json, and various code files to align with the application's purpose. AI system instructions and tool descriptions are also updated to match the new persona and functionality.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chronos Sentinel</title>
+    <title>Chronos Gaia</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <script>
@@ -16,12 +16,12 @@
             },
             colors: {
               cyber: {
-                900: '#050b14',
-                800: '#0a1525',
-                700: '#112240',
-                accent: '#00f2ff',
-                warn: '#ff0055',
-                success: '#00ff9d'
+                900: '#020617', // Slate 950
+                800: '#14532d', // Green 900
+                700: '#166534', // Green 800
+                accent: '#84cc16', // Lime 500
+                warn: '#ef4444', // Red 500
+                success: '#22d3ee' // Cyan 400
               }
             }
           }
@@ -30,7 +30,7 @@
     </script>
     <style>
       body {
-        background-color: #050b14;
+        background-color: #020617;
         color: #e2e8f0;
       }
       /* Custom scrollbar */
@@ -39,14 +39,14 @@
         height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #0a1525;
+        background: #020617;
       }
       ::-webkit-scrollbar-thumb {
-        background: #112240;
+        background: #166534;
         border-radius: 3px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #1e3a6a;
+        background: #84cc16;
       }
     </style>
   <script type="importmap">
